[package]
edition = "2021"
name = "moss_licence"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.2"
base64 = "0.21.2"
mac_address = "1.1.5"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi6"] }
napi-derive = "2.12.2"
rand = "0.8.5"
regex = "1.8.3"
rsa = "0.9.2"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
